@@ -10,6 +10,7 @@ v0.12.5 (??.03.2013)
  * TYPO3 dependency for TER added
  * Initial implementation for FAL support in TYPO3 6.0
  * tx_rnbase_util_DB: update for TYPO3 6.1
+ * Link creation optimized. No cHash per default for plugins in USER_INT mode.
 
 v0.12.4 (14.03.2013)
  * Bugfix for SQL-error-logging. Thanks to Michael Wagner!
